# TeleClaudeCode

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  launcher.py  pyproject.toml
app/: config.py  main.py
app/api/: health.py  webhook.py
app/bot/: polling.py  telegram_client.py
app/core/: acl.py  chunker.py
app/worker/: claude_exec.py  jobs.py  runner.py
tests/integration/: test_webhook_flow.py
tests/unit/: test_acl.py  test_chunker.py  test_config.py
